error_templates/java/test_files/unclosed_character_literal_error/test.txt
template: "Java.UnclosedCharacterLiteralError"
---
UnclosedCharacterLiteralError.java:4: error: unclosed character literal
        char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
                  ^
UnclosedCharacterLiteralError.java:4: error: unclosed character literal
        char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
                              ^
2 errors
===
template: "Java.UnclosedCharacterLiteralError"
---
# UnclosedCharacterLiteralError
This error occurs when there's an attempt to define a character literal with more than one character, or if the character literal is not closed properly.
```
    public static void main(String[] args) {
        char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
                  ^^^^^^^^^^^^^
    }
}
```
## Steps to fix
### 1. Store as a String
The character literal should contain only one character. If you intend to store a string, use double quotes (`"`).
```diff
    public static void main(String[] args) {
-         char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
+         String ch = "Hello World"; // This will cause an error because the character literal is not closed.
    }
}
```

### 2. Use single quotes for characters
If you want to store a single character, ensure that you use single quotes (`'`).
```diff
    public static void main(String[] args) {
-         char ch = 'Hello World'; // This will cause an error because the character literal is not closed.
+         char ch = 'H'; // This will cause an error because the character literal is not closed.
    }
}
```

